--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 
                     <div class="card">
                         <ul class="profiles-list">
-                            <li v-for="(element, i) in contacts">  <!-- creo un ciclo v-for per scorrere l'array "contacts" e prendere le proprietà (avatar & name) nell'array stesso -->
-                                <figure class="sidebar-profile">
-                                    <img class="profile-img" :src="element.avatar" :alt="element.name">
+                            <li v-for="(contact, i) in contacts" @click="currentContact = i">  <!-- creo un ciclo v-for per scorrere l'array "contacts" e prendere le proprietà (avatar & name) nell'array stesso -->
+                                <figure class="sidebar-profile">                               <!-- aggiungo l'evento al click per cambiare i messaggi -->
+                                    <img class="profile-img" :src="contact.avatar" :alt="contact.name">
                                     <div class="profile-status">
-                                        <h4><strong>{{element.name}}</strong></h4>
+                                        <h4><strong>{{contact.name}}</strong></h4>
                                         <span class="font-lightgrey"
-                                            v-for="(message, i) in contacts[i].messages">  <!-- creo un ciclo v-for per scorrere l'array "messages" annidato all'interno dell'array "contacts" per prendere il messaggio che mi interessa -->
+                                            v-for="(message, i) in contacts[currentContact].messages">  <!-- creo un ciclo v-for per scorrere l'array "messages" annidato all'interno dell'array "contacts" per prendere il messaggio che mi interessa -->
                                             <!-- {{message.message}} -->
                                         </span>
                                     </div>
@@ -148,9 +148,9 @@
                 <div class="chat">    
                     <div class="chat-header bg-lightgrey">
                         <div class="chatbar-profile">
-                            <img class="profile-img" src="./img/avatar_8.jpg" alt="">
+                            <img class="profile-img" :src="contacts[currentContact].avatar" :alt="contacts[currentContact].name">
                             <div class="profile-status">
-                                <h4><strong>Davide</strong></h4>
+                                <h4><strong>{{contacts[currentContact].name}}</strong></h4>
                                 <span class="font-lightgrey">Lorem ipsum dolor sit.</span>
                             </div>
                             <ul class="tools-list">
@@ -174,8 +174,8 @@
                     </div>
 
                     <div class="chat-body">
-                        <div class="chat-body-mex" v-for="(messages, i) in contacts">
-                            <div class="send-mex pos-relative" v-for="(message, i) in contacts[i].messages">
+                        <div class="chat-body-mex">
+                            <div class="sent pos-relative" :class="message.status" v-for="(message, i) in contacts[currentContact].messages">
                                 <p>
                                     {{message.message}}
                                 </p>
@@ -202,7 +202,7 @@
                                 </ul>
                             </div>
                             
-                            <div class="recive-mex pos-relative" v-for="(message, i) in contacts[i].messages">
+                            <!-- <div class="received pos-relative" v-for="(message, i) in contacts[i].messages">
                                 <p>
                                     {{message.message}}
                                 </p>
@@ -227,7 +227,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
 
